--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,13 @@
         android:orientation="vertical">
 
     <EditText
+            android:id="@+id/et_email"
             android:hint="Email"
             android:inputType="textEmailAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     <EditText
+            android:id="@+id/et_password"
             android:hint="Password"
             android:inputType="textPassword"
             android:layout_width="match_parent"
