--- a/app/src/main/res/layout/activity_kasus_list.xml
+++ b/app/src/main/res/layout/activity_kasus_list.xml
@@ -5,15 +5,6 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:showIn="@layout/app_bar_home"
-        tools:context=".HomeActivity">
-
-    <TextView
-            android:text="Hello world"
-            android:textSize="50sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-    />
+        tools:context=".KasusListActivity">
 
 </android.support.constraint.ConstraintLayout>
