link home menu with activities

--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -5,11 +5,11 @@
 
     <group android:checkableBehavior="single">
         <item
-                android:id="@+id/nav_camera"
+                android:id="@+id/nav_kasus"
                 android:icon="@drawable/libra"
                 android:title="Kasus"/>
         <item
-                android:id="@+id/nav_gallery"
+                android:id="@+id/nav_tambah_kasus"
                 android:icon="@drawable/ic_menu_gallery"
                 android:title="Tambah Kasus"/>
         <item
