--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -13,9 +13,9 @@
                 android:icon="@drawable/ic_menu_gallery"
                 android:title="Tambah Kasus"/>
         <item
-                android:id="@+id/nav_slideshow"
+                android:id="@+id/nav_spinner"
                 android:icon="@drawable/ic_menu_slideshow"
-                android:title="Lab"/>
+                android:title="Spinner"/>
         <item
                 android:id="@+id/nav_manage"
                 android:icon="@drawable/ic_menu_manage"
