--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -17,9 +17,9 @@
                 android:icon="@drawable/ic_menu_slideshow"
                 android:title="Spinner"/>
         <item
-                android:id="@+id/nav_manage"
+                android:id="@+id/nav_date_picker"
                 android:icon="@drawable/ic_menu_manage"
-                android:title="Tools"/>
+                android:title="Date Picker"/>
     </group>
 
     <item android:title="Communicate">
